client/stylesheets/components/_avatars.scss
.list--avatar {
  @extend %scut-list-unstyled;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  margin: n() r(-2);
}
.list--avatar__cell {
  margin: 0 r(2) r(4);
  width: r(20);
}

.card--avatar {
  @include Card();
  display: block;
  overflow: hidden;
  &.card--avatar--judge {
    @include scut-color-swap($blue, $blue-dark, .2s, true);
  }
  &.card--avatar--prosecutor {
    @include scut-color-swap($purple, $purple-dark, .2s, true);
  }
}
.card--avatar__pic {
  transition: opacity .2s ease-in-out 0s;
  .card--avatar:hover & { opacity: .8; }
}
.card--avatar__name {
  margin: 0;
  padding: r(1);
  text: bold center ms(2) $white;
}

